# advent-of-code24

./: D02.ml  D04.ml  D05.ml  D06.ml
AOC24/: dune-project
AOC24/_build/: .db  .digest-db  log
AOC24/_build/default/: AOC24.dune-package
AOC24/_build/default/.dune/: configurator  configurator.v2
AOC24/_build/default/lib/: 4.ml  aOC24.ml-gen  (+1 more)
AOC24/lib/: 3.html  3.ml  5.ml  dune
AOC24/lib/util/: f.ml
AOC24/test/: dune
Aoc24/: Aoc24.opam  dune-project  newDay.bash
Aoc24/_build/: .db  .digest-db  log
Aoc24/_build/default/: Aoc24.dune-package  Aoc24.install
Aoc24/_build/default/.dune/: configurator  configurator.v2
Aoc24/_build/default/lib/: Aoc24.cma  Aoc24.cmxa  Aoc24.cmxs  D07.ml  D08.ml  D09.ml  aoc24.ml-gen
Aoc24/_build/default/lib/.Aoc24.objs/: aoc24__D07.impl.d  aoc24__D08.impl.d  aoc24__D09.impl.d
Aoc24/_build/default/lib/.Aoc24.objs/byte/: aoc24.cmi  aoc24.cmo  aoc24.cmt  aoc24__D07.cmi  aoc24__D07.cmo  aoc24__D07.cmt  aoc24__D08.cmi  aoc24__D08.cmo  aoc24__D08.cmt  aoc24__D09.cmi  aoc24__D09.cmo  aoc24__D09.cmt
Aoc24/_build/default/lib/.Aoc24.objs/native/: aoc24.cmx  aoc24__D07.cmx  aoc24__D08.cmx  aoc24__D09.cmx
Aoc24/_build/default/lib/.merlin-conf/: lib-Aoc24
Aoc24/_build/default/test/: test_aoc24.ml
Aoc24/_build/default/test/.merlin-conf/: exe-test_aoc24
Aoc24/_build/default/test/.test_aoc24.eobjs/byte/: dune__exe__Test_aoc24.cmi  dune__exe__Test_aoc24.cmti
Aoc24/_build/default/test/.test_aoc24.eobjs/native/: dune__exe__Test_aoc24.cmx
Aoc24/_build/install/default/lib/Aoc24/: META  dune-package  opam
Aoc24/lib/: dune
(+13 files in other folders)
